@@ -1,3 +1,9 @@
+2001-10-01  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* ogdi/c-api/client.c: fixed problems in cln_CalcCtlPoints() with 
+	very small regions, equivelent to one pixel of data.  Sometimes 
+	produced a degenerate transformation.
+
 2001-09-28  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* ogdi/include/ecs_util.h: Added the OGDI_VERSION and OGDI_RELEASEDATE
